--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,11 +31,16 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <!-- <div class="row time-block">
+        <div class="hour col-1">9am</div>
+        <textarea class="past description col-10">test text</textarea>
+        <button class="saveBtn col-1"></button>
+      </div> -->
+
     </div>
-    <script>
-      console.log(moment())
-    </script>
-    
+  
+    <script src="./script.js"></script>
     <script src="./lib/moment/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
