--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    
   
     
-    <script src="./lib/moment/moment.min.js"></script>
+    <!-- <script src="./lib/moment/moment.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
